# c-console-sketch

./: .gitignore  CMakeLists.txt  README.md  nsc.cc
